// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DynamicImage stories snapshot > Default story renders and matches snapshot 1`] = `
<div>
  <div
    class=""
  >
    <picture>
      <source
        media="(min-width: 768px)"
        sizes="1200px"
        srcset="https://via.placeholder.com/800?sw=1200&q=60 1200w, https://via.placeholder.com/800?sw=2400&q=60 2400w"
        type="image/webp"
      />
      <source
        media="(min-width: 640px)"
        sizes="800px"
        srcset="https://via.placeholder.com/800?sw=800&q=60 800w, https://via.placeholder.com/800?sw=1600&q=60 1600w"
        type="image/webp"
      />
      <source
        sizes="400px"
        srcset="https://via.placeholder.com/800?sw=400&q=60 400w, https://via.placeholder.com/800?sw=800&q=60 800w"
        type="image/webp"
      />
      <img
        alt="Example image"
        fetchpriority="auto"
        loading="lazy"
        src="https://via.placeholder.com/800"
      />
    </picture>
  </div>
</div>
`;

exports[`DynamicImage stories snapshot > HighPriority story renders and matches snapshot 1`] = `
<div>
  <div
    class=""
  >
    <picture>
      <source
        media="(min-width: 768px)"
        sizes="1200px"
        srcset="https://via.placeholder.com/800?sw=1200&q=60 1200w, https://via.placeholder.com/800?sw=2400&q=60 2400w"
        type="image/webp"
      />
      <source
        media="(min-width: 640px)"
        sizes="800px"
        srcset="https://via.placeholder.com/800?sw=800&q=60 800w, https://via.placeholder.com/800?sw=1600&q=60 1600w"
        type="image/webp"
      />
      <source
        sizes="400px"
        srcset="https://via.placeholder.com/800?sw=400&q=60 400w, https://via.placeholder.com/800?sw=800&q=60 800w"
        type="image/webp"
      />
      <img
        alt="High priority image"
        fetchpriority="high"
        loading="eager"
        src="https://via.placeholder.com/800"
      />
    </picture>
  </div>
</div>
`;

exports[`DynamicImage stories snapshot > WithCustomComponent story renders and matches snapshot 1`] = `
<div>
  <div
    class="bg-muted rounded-lg p-4"
  >
    <picture>
      <source
        media="(min-width: 640px)"
        sizes="800px"
        srcset="https://via.placeholder.com/800?sw=800&q=60 800w, https://via.placeholder.com/800?sw=1600&q=60 1600w"
        type="image/webp"
      />
      <source
        sizes="400px"
        srcset="https://via.placeholder.com/800?sw=400&q=60 400w, https://via.placeholder.com/800?sw=800&q=60 800w"
        type="image/webp"
      />
      <div
        alt="Custom component example"
        fetchpriority="auto"
        loading="lazy"
        src="https://via.placeholder.com/800"
      />
    </picture>
  </div>
</div>
`;

exports[`DynamicImage stories snapshot > WithObjectWidths story renders and matches snapshot 1`] = `
<div>
  <div
    class=""
  >
    <picture>
      <source
        media="(min-width: 1024px)"
        sizes="1200px"
        srcset="https://via.placeholder.com/800?sw=1200&q=60 1200w, https://via.placeholder.com/800?sw=2400&q=60 2400w"
        type="image/webp"
      />
      <source
        media="(min-width: 768px)"
        sizes="800px"
        srcset="https://via.placeholder.com/800?sw=800&q=60 800w, https://via.placeholder.com/800?sw=1600&q=60 1600w"
        type="image/webp"
      />
      <source
        media="(min-width: 640px)"
        sizes="600px"
        srcset="https://via.placeholder.com/800?sw=600&q=60 600w, https://via.placeholder.com/800?sw=1200&q=60 1200w"
        type="image/webp"
      />
      <source
        sizes="400px"
        srcset="https://via.placeholder.com/800?sw=400&q=60 400w, https://via.placeholder.com/800?sw=800&q=60 800w"
        type="image/webp"
      />
      <img
        alt="Object widths example"
        fetchpriority="auto"
        loading="lazy"
        src="https://via.placeholder.com/800"
      />
    </picture>
  </div>
</div>
`;
